--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
     <string name="enter_water_amount">Enter water amount (liters)</string>
+    <string name="home">Home</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="water_intake_added">Water intake added: %1$.2f liters</string>
+    <string name="invalid_input">Please enter a valid number</string>
 </resources>
